--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="main_error_server">Error en el servidor</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="channels">Channels</string>
-    <string name="popular">Popular</string>
+    <string name="channels">Canales</string>
+    <string name="popular">Populares</string>
+    <string name="recommended">Recomendados</string>
 </resources>
